--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -1,13 +1,56 @@
 .checkout{
-    padding: 23px 23px;
+    padding: 10px 23px;
+}
+
+.main__checkout{
+    display: flex;
+    height: max-content;
+    background-color: #fff;
 }
 
 .checkout__Add{
     width: 100%;
-    margin-bottom: 20px;
-    
+    margin-bottom: 10px;
+}
+
+.inputBox{
+    margin: 0px 5px;
 }
 
 .checkout__title{
+    
+    padding: 10px 5px;
+}
+
+.checkout__right{
+    margin: 30px;
+    text-align: center;
+}
+
+.subtotal{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 300px;
+    height: 100px;
+    padding: 20px;
+    background-color: #f3f3f3;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+}
+
+.subtotal>button{
+    background: #f0c14b;
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-color: #a88734 #9c7e31 #846a29;
+    border-style: solid;
+    border-width: 1px;
+    color: #111;
+    padding:2px 4px;
+    cursor: pointer;
     
 }
