--- a/src/Product.css
+++ b/src/Product.css
@@ -37,5 +37,6 @@
 .product > button{
     background-color: #f0c14b;
     border-color: #a88734 #9c7e31 #846a29;
-    padding: 1px 5px
+    padding: 1px 5px;
+    cursor: pointer;
 }
